fix: change burger line height from 1.5px to 2px for equal 3px gaps in 12px box

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -157,7 +157,7 @@
       display: block;
 
       .navbar__burger-line {
-        height: 1.5px;
+        height: 2px;
         width: 100%;
         background-color: #a1a1aa;
         border-radius: 2px;
